[package]
name = "afe4404"
version = "0.1.0"
description = "AFE4404 driver for Rust Embedded HAL" 
edition = "2021"

# [workspace]
# members = [
#     "example",
# ]

[build-dependencies]
codegen = { version = "0.2.0" }

[dependencies]
embedded-hal = { version = "1.0.0-alpha.9" }
modular-bitfield = { version = "0.11.2" }
thiserror-no-std = { version = "2.0.2" }
uom = { version = "0.33.0" }