[package]
name = "afe4404"
version = "0.1.0"
authors = ["Fabio Cragnolini"]
edition = "2021"
description = "AFE4404 driver for Rust Embedded HAL."
readme = "README.md"
repository = "https://github.com/pulse-loop/AFE4404"
license = "MIT"
keywords = ["afe4404", "embedded-hal", "driver"]

# [workspace]
# members = [
#     "example",
# ]

[build-dependencies]
codegen = { version = "0.2.0" }

[dependencies]
embedded-hal = { version = "1.0.0-alpha.9" }
modular-bitfield = { version = "0.11.2" }
thiserror-no-std = { version = "2.0.2" }
uom = { version = "0.33.0" }