[package]
name = "afe4404-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embuild = { version = "0.30.3" }
anyhow = { version = "1.0.65" }

[dependencies]
AFE4404 = { path = ".." }
esp-idf-hal = { version = "0.38.1" }
esp-idf-sys = { version = "0.31.9", features = ["native", "binstart"] }
