[package]
name = "afe4404-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embuild = { version = "0.30.3" }
anyhow = { version = "1.0.65" }

[dependencies]
afe4404 = { path = ".." }
embedded-hal = { version = "1.0.0-alpha.9" }
esp-idf-hal = { version = "0.39.2" }
esp-idf-sys = { version = "0.31.11", features = ["native", "binstart"] }
uom = "0.33.0"